# galprop

./: .gitignore  CMakeLists.txt  GALPROPConfig.cmake.in
GALDEF/: exampleGalstructXMLFile.xml  galdef_56_example
GALPROP_56.0.2870_Source/: CMakeLists.txt~  License.txt  README  cmake_config.h.in
GALPROP_56.0.2870_Source/GALDEF/: exampleSourceClass.txt  galdef_56_DCR_rifrimento_He39_BEST_BoC_CO9bis4_3_2bis3mod3all9_Z28_16BEST_e28s03BEST_0_paper
GALPROP_56.0.2870_Source/source/: B_field_3D_model.h  Configure.cc  Configure.h  Distribution.cc  Distribution.h  DistributionFunction.cc  DistributionFunction.h  Galaxy.cc  Galdef.cc  Galdef.h  Galprop.cc~  Galprop.h  GalstructXMLDistribution.cc  GasEmissFunction.cc  GasFunction.cc  Particle.h  PowerLawSD.h  PropelBase.h  PropelOperatorSplitting.cc  RadiationField.cc  RadiationField.h  SmoothPowerLawSD.cc  SourceClass_UniformSpectra.h  SpatialDistribution.h  SpectralDistribution.cc  Spectrum.h  create_galaxy.cc  create_galaxy.cc~  decayed_cross_sections.cc  galpropMain.cc  galprop_internal.h  gen_DM_source.cc~  gen_luminosity.cc  gen_pi0_decay_emiss.cc  gen_secondary_antiproton_source.cc  gen_secondary_pair_source.cc  gen_secondary_source.cc  gen_skymaps.cc  gen_synch_emiss.cc  gen_tertiary_antiproton_source.cc  (+17 more)
galtoolslib-1.0.855-Source/: CMakeLists.txt  License.txt  README  cmake_config.h.in  galtoolslibConfig.cmake.in
galtoolslib-1.0.855-Source/CL/: cl2.hpp
galtoolslib-1.0.855-Source/cmake/Modules/: CheckForRegex.cmake  CheckFortranSourceCompiles.cmake  FindASTRO.cmake  FindCCfits.cmake  FindCfitsio.cmake  FindGSL.cmake  FindHEALPix.cmake  FindOpenMP.cmake  FindWCS.cmake  FindXerces.cmake  helpfulMacros.cmake
galtoolslib-1.0.855-Source/cppUnitTests/: CMakeLists.txt  cppUnitTests.cc  testFullSky.cc  testFullSky.h  testInterpolation.cc  testInterpolation.h  testOpenCLgalstruct.cc  testOpenCLgalstruct.h  testParameters.cc  testParameters.h  testPlaneProfiles.cc  testPlaneProfiles.h  testRadialProfiles.cc  testRadialProfiles.h  testSkymap.cc  testSkymap.h  testSparseSky.cc  testSparseSky.h  testVariables.cc  testVariables.h
galtoolslib-1.0.855-Source/galstruct/: CMakeLists.txt  cylindricalprofiles.cpp  cylindricalprofiles.h  planeprofiles.cpp  planeprofiles.h  radialprofiles.cpp  radialprofiles.h  spiralarms.cpp  spiralarms.h
galtoolslib-1.0.855-Source/geometry/: CMakeLists.txt
galtoolslib-1.0.855-Source/libskymap/: ArraySlice.h  BaseSky.cc  BaseSky.h  BaseSkyFitsIO.cc  BaseSkyFitsIO.h  CMakeLists.txt  Coordinate.cc  Coordinate.h  FullSky.h  HealpixBaseExtended.cc  HealpixBaseExtended.h  Region.cc  Region.h  SkySelection.cc  SkySelection.h  Skymap.cc  Skymap.h  SparseSky.h  SparseSkymap.h
galtoolslib-1.0.855-Source/manualTests/: CMakeLists.txt  armTests.cpp  convertToFullSky.cc  convertWCStoFullSky.cc  testBaseSkyFitsIO.cc  testInterpolationAndConversion.cc  testStatusIndicator.cc
galtoolslib-1.0.855-Source/nuclei/: CMakeLists.txt  He_to_H_CS.cc  Kcapture_cs.cc  Nuclei_Interface.cc  Nuclei_Interface.cc~  Nuclei_Interface.h  constants.h  nuc_package.cc  sigma_boron_dec_heinbach_simon.cc
galtoolslib-1.0.855-Source/processes/: CMakeLists.txt  Processes_Interface.cc  Processes_Interface.h  ap_sergey.f  blattnig.cc  crn6.f  energy_losses.cc  kamae.cc  nucleon_cs.cc  pp_meson.f
galtoolslib-1.0.855-Source/random/: CMakeLists.txt  Config.h  ExactExponential.hpp  ExactPower.hpp  ExponentialDistribution.hpp  ExponentialProb.hpp  LeadingZeros.hpp  NormalDistribution.hpp  Random.cpp  Random.hpp  RandomAlgorithm.hpp  RandomCanonical.hpp  RandomEngine.hpp  RandomMixer.hpp  RandomNumber.hpp  RandomPower2.hpp  RandomSeed.hpp  RandomSelect.hpp  RandomType.hpp
galtoolslib-1.0.855-Source/utils/: CMakeLists.txt  ErrorLogger.cc  ErrorLogger.h  Interpolation.cc  Interpolation.h  Malloc.cc  Malloc.h  Parameters.cc  Parameters.h  PhysicalConstants.h  Reader.cc  Reader.h  ReaderErrorReporter.cc  ReaderErrorReporter.h  Reader_imp.h  Registry.h  ShadowPtr.h  ShadowPtr_fwd.h  Singleton.h  StatusIndicator.cc  StatusIndicator.h  Timer.cc  Timer.h  Units.h  Variables.cc  Variables.h  md5_README.txt
source/: ArmData.h  AvXCO.cc  B_field_3D_model.cc  CMakeLists.txt  D_pp.cc  D_xx.cc  Galaxy.h  Galprop.cc  GalstructXMLDistribution.h  Particle.cc  PowerLawSD.cc  PropelOperatorSplitting.h  SmoothPowerLawSD.h  SourceClass.cc  SourceClass.h  SourceClass_Compatibility.cc  SourceClass_Compatibility.h  SourceClass_UniformSpectra.cc  SpatialDistribution.cc  SpectralDistribution.h  StellarGeometryDistributions.h  blattnig.cc  create_SNR.cc  create_gcr.cc  e_KN_loss.cc  electrons_normalize.cc  eprop.cc  fill_transport_arrays.cc  galprop_internal.cc  gen_IC_emiss.cc  gen_IC_skymap.cc  gen_bremss_emiss.cc  gen_isrf_energy_density.cc  gen_knock_on_electron_source.cc  gen_secondary_positron_source.cc  gen_secondary_proton_source.cc  kappa_free_free.cc  kappa_free_free.h  kinematic.cc  los_intersection.cc  (+19 more)
